--- a/arch/riscv/cpu/k230/Makefile
+++ b/arch/riscv/cpu/k230/Makefile
@@ -59,5 +59,6 @@ EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_hmac
 EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_ka
 EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_rt
 EXTRA_CFLAGS += -I$(srctree)/arch/$(ARCH)/cpu/k230/puf_fw/pufs_sm2
+EXTRA_CFLAGS += -I$(srctree)/board/canaan/common
 
 obj-$(CONFIG_$(SPL_)DFU_VIRT) += dfu_otp.o
